--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,27 @@ header {
 }
 
 header .logo img {
-    max-width: 100px;
+    max-width: 400px;
+}
+
+.contenido {
+    scroll-snap-type:mandatory;
+    overflow-x:scroll;
+    display:flex;
+    gap: 10px;
+    padding: 10px;
+    width: 98,5%;
+    max-width: 100vw;
+    scroll-behavior: smooth;
+    border-radius: 100px;
+}
+
+main .contenido article img{
+    flex: 0 1 150px auto;
+    margin: 5px 1px;
+    background-color: red;
+    width: 2000px;
+    height: 200px;
 }
 
 nav ul {
